# GameVoid

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_2d_log.txt  build_errors.txt  build_result.txt  build_stderr.txt  build_test.ps1  gamevoid_config.ini  gamevoid_config.ini.template  imgui.ini  setup.ps1
ai_server/: image_analyzer.py  mesh_generator.py  mesh_generator_midas.py  requirements.txt  sam_segmenter.py  server.py  setup_ai_server.ps1
ai_server/uploads/export_test_140e7767/: probe.mtl
ai_server/uploads/export_test_758261dd/: model.gltf  probe.glb
generated_models/: .gitkeep
generated_models/batman_1775390398/: batman_1775390398.mtl
generated_models/batman_1775390611/: batman_1775390611.mtl
generated_models/man_1775814240/: man_1775814240.mtl
generated_models/man_at_desk_1775896614/: man_at_desk_1775896614.mtl
generated_models/man_at_desk_1775898291/: man_at_desk_1775898291.mtl
generated_models/man_at_desk_1775899402/: man_at_desk_1775899402.mtl
generated_models/man_with_idea_1775813708/: man_with_idea_1775813708.mtl
generated_models/person_1775813177/: person_1775813177.mtl
generated_models/person_1775814113/: person_1775814113.mtl
include/ai/: AIManager.h  ImageTo3DManager.h
include/animation/: Animation.h  SkeletalAnimation.h
include/assembly/: ObjectAssembly.h
include/assets/: Assets.h
include/camera/: EditorCamera.h
include/constraints/: Constraints.h
include/core/: Component.h  Engine.h  EventSystem.h  FPSCamera.h  GLDefs.h  GameObject.h  Math.h  Scene.h  SceneSerializer.h  Transform.h  Types.h  Window.h
include/csg/: CSGOperations.h
include/editor/: CLIEditor.h  EditorUI.h  OrbitCamera.h  UndoRedo.h
include/editor2d/: Dialogue2D.h  Editor2DCamera.h  Editor2DTypes.h  Editor2DViewport.h  Lighting2D.h  Pathfinding2D.h  Scene2D.h
include/effects/: ParticleSystem.h
include/future/: Placeholders.h
include/generator/: SceneBlueprint.h
include/geometry/: MeshBuilder.h  Primitives.h
include/input/: ViewportInput.h
include/mesh/: MeshOps.h
include/physics/: Physics.h
include/procedural/: NoiseGen.h
include/renderer/: Camera.h  Frustum.h  Lighting.h  Material.h  MaterialComponent.h  MeshRenderer.h  Renderer.h
include/scripting/: NativeScript.h  NodeGraph.h  ScriptEngine.h
include/scripting/physics/: BehaviorAnalyzer.h  ForceController.h  PhysicsScript.h  PhysicsScriptingExamples.h
include/shapes/: ShapeLibrary.h
include/terrain/: Terrain.h  TerrainUtils.h
include/topology/: Topology.h
include/vehicle/: CarController3D.h  VehicleAssembly.h
src/: main.cpp
src/ai/: AIManager.cpp  ImageTo3DManager.cpp
src/animation/: Animation.cpp  SkeletalAnimation.cpp
src/assembly/: ObjectAssembly.cpp
src/assets/: Assets.cpp
src/camera/: EditorCamera.cpp
src/constraints/: Constraints.cpp
src/core/: Engine.cpp  FPSCamera.cpp  GLLoader.cpp  SceneSerializer.cpp  Window.cpp
src/csg/: CSGOperations.cpp
src/editor/: CLIEditor.cpp  EditorUI.cpp  OrbitCamera.cpp
src/editor2d/: Dialogue2D.cpp  Editor2DCamera.cpp  Editor2DViewport.cpp  Lighting2D.cpp  Pathfinding2D.cpp
src/effects/: ParticleSystem.cpp
src/future/: Placeholders.cpp
src/generator/: SceneBlueprint.cpp
src/geometry/: MeshBuilder.cpp  Primitives.cpp
src/input/: ViewportInput.cpp
src/mesh/: MeshOps.cpp
src/physics/: Physics.cpp
src/procedural/: NoiseGen.cpp
src/renderer/: Camera.cpp  Material.cpp  MaterialComponent.cpp  Renderer.cpp
src/scripting/: NativeScript.cpp  NodeGraph.cpp  ScriptEngine.cpp
src/scripting/physics/: BehaviorAnalyzer.cpp  ForceController.cpp  PhysicsScript.cpp
src/shapes/: ShapeLibrary.cpp
src/terrain/: Terrain.cpp  TerrainUtils.cpp
src/topology/: Topology.cpp
src/vehicle/: VehicleAssembly.cpp
